tests/models/enum/unnamed/unit/fail/min_length.stderr
error: Support condition is alias, default
 --> tests/models/enum/unnamed/unit/fail/min_length.rs:2:1
  |
2 | #[model]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
